--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>A-Frame Boilerplate</title>
-</head>
-<body>
-  <a-scene>
-    <a-assets>
-    </a-assets>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>A-Frame Boilerplate</title>
+  </head>
+  <body>
+    <a-scene>
+      <a-assets>
+        {# <img id="sky" segments-height="2000" src="./assets/textures/space.jpeg"> #}
+      </a-assets>
 
-    <a-box
-      color="blue"
-      position="0 1 -3"
-      rotation="45 45 0"
-    ></a-box>
+      <a-box color="blue" position="0 1 -3" rotation="45 45 0"></a-box>
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="10" height="10" color="#Fbfbfb"></a-plane>
+      <a-box color="red" position="0 1 -5"></a-box>
 
-    <a-camera>
-      <a-cursor></a-cursor>
-    </a-camera>
-  </a-scene>
-</body>
+      {# <a-sky src="#sky"></a-sky>  #}
+
+      <a-camera>
+        <a-cursor></a-cursor>
+      </a-camera>
+    </a-scene>
+  </body>
 </html>
